--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "start": "vite preview",
+  "build": "vite build",
+  "dev": "vite"
+},
+
   "dependencies": {
     "axios": "^1.7.2",
     "file-saver": "^2.0.5",
