--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index"
+    "start": "node index.js",
+  "dev": "nodemon index.js",
+  "lint": "eslint . --fix"
   },
   "author": "",
   "license": "ISC",
